# ukncbtl-qt

./: !astyle.bat  !doxygen.bat  .appveyor.yml  .gitignore  .travis.yml  Common.cpp  Common.h  Emulator.cpp  Emulator.h  QtUkncBtl.pro  QtUkncBtl.qrc  README.md  Settings.cpp  UnitTests.cpp  UnitTests.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qconsoleview.cpp  qconsoleview.h  qdebugview.cpp  qdebugview.h  qdialogs.cpp  qdialogs.h  qdisasmview.cpp  qdisasmview.h  qkeyboardview.cpp  qkeyboardview.h  qmemoryview.cpp  qmemoryview.h  qscreen.cpp  qscreen.h  qscripting.cpp  qscripting.h  qsoundout.cpp  qsoundout.h  stdafx.h  ui_mainwindow.h
.github/workflows/: linux-release.yml  macos-release.yml  push-matrix.yml  push-ubuntu.yml  pvs-studio.yml
emubase/: Board.cpp  Board.h  Defines.h  Disasm.cpp  Emubase.h  Floppy.cpp  Hard.cpp  Memory.cpp  Memory.h  Processor.cpp  Processor.h
emulator/: !astyle.bat  CMakeLists.txt  Common.cpp  Common.h  Doxyfile  Emulator.cpp  Emulator.h  QtUkncBtl.pro  QtUkncBtl.qrc  Settings.cpp  UnitTests.cpp  UnitTests.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qconsoleview.cpp  qconsoleview.h  qdebugview.cpp  qdebugview.h  qdialogs.cpp  qdialogs.h  qdisasmview.cpp  qdisasmview.h  qkeyboardview.cpp  qkeyboardview.h  qmemoryview.cpp  qmemoryview.h  qscreen.cpp  qscreen.h  qscripting.cpp  qscripting.h  stdafx.h  translations.qrc
emulator/emubase/: CMakeLists.txt  Floppy.cpp  Processor.cpp  Processor.h  stdafx.h
emulator/images/: ukncbtl.icns
emulator/lang/: ukncbtl_en.ts  ukncbtl_ru.ts
emulator/util/: CMakeLists.txt  WavPcmFile.cpp  WavPcmFile.h  stdafx.h
linux/: qtneonbtl.desktop
trunk/src/UKNCBTL.Qt/: !rununitest.bat  Common.cpp  Common.h  Emulator.cpp  Emulator.h  QtUkncBtl.pro  QtUkncBtl.qrc  Settings.cpp  UnitTests.cpp  UnitTests.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qconsoleview.cpp  qconsoleview.h  qdebugview.cpp  qdebugview.h  qdisasmview.cpp  qdisasmview.h  qkeyboardview.cpp  qkeyboardview.h  qmemoryview.cpp  qmemoryview.h  qscreen.cpp  qscreen.h  qscripting.cpp  qscripting.h  qsoundout.cpp  qsoundout.h  stdafx.h  ui_mainwindow.h
trunk/src/UKNCBTL.Qt/emubase/: Board.cpp
trunk/src/UKNCBTL.Qt/util/: WavPcmFile.cpp
util/: WavPcmFile.cpp  WavPcmFile.h
